<resources>
    <string name="app_name">Numerical Analysis</string>
    <string name="action_Home">Home</string>
    <string name="action_OneVariable">One Variable</string>
    <string name="action_EquationsSystems">Equations Systems</string>
    <string name="action_Interpolation">Interpolation</string>
    <string name="title_activity_one_variable">One Variable</string>
    <string name="title_activity_equiations_systems">Equiations Systems</string>
    <string name="title_activity_interpolation">Interpolation</string>
    <string name="title_activity_bisection">Bisection</string>
    <string name="title_activity_algorithm_bisection">Algorithm Bisection</string>
    <string name="title_activity_incremental_searches">Incremental Searches</string>
    <string name="title_activity_false_rule">False Rule</string>
    <string name="title_activity_fixed_point">Fixed Point</string>
    <string name="title_activity_newton_raphson">Newton Raphson</string>
    <string name="title_activity_secant">Secant</string>
    <string name="title_activity_gauss_elimination">Gauss Elimination</string>
    <string name="title_activity_factoring_lu">Factoring LU</string>
    <string name="title_activity_jacobi">Jacobi</string>
    <string name="title_activity_gauss_seidel">Gauss Seidel</string>
    <string name="title_activity_richardson">Richardson</string>
    <string name="title_activity_sor">SOR</string>
    <string name="title_activity_reduction_systems">Reduction Systems</string>
    <string name="title_activity_lagrange_interpolation">Lagrange Interpolation</string>
    <string name="title_activity_newton_interpolation">Newton Interpolation</string>
    <string name="title_activity_newton_raphson_modified">Newton Raphson Modified</string>
</resources>