<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.edu.eafit.numericalanalysis.equiationssystems.GaussElimination">

    <item android:id="@+id/action_Home_Item"
        android:title="@string/action_Home"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_GaussElimination_Item"
        android:title="@string/title_activity_gauss_elimination"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_FactoringLU"
        android:title="@string/title_activity_factoring_lu"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_Jacobi"
        android:title="@string/title_activity_jacobi"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_GaussSeidel_Item"
        android:title="@string/title_activity_gauss_seidel"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_Richardson_Item"
        android:title="@string/title_activity_richardson"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_SOR_Item"
        android:title="@string/title_activity_sor"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>